WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259375
REGRESSION (UI-side compositing): Jumpy full screen transition animation
https://bugs.webkit.org/show_bug.cgi?id=259375
Summary
REGRESSION (UI-side compositing): Jumpy full screen transition animation
Richard Robinson
Reported
2023-07-20 16:15:50 PDT
rdar://111534888
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-07-20 16:20:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15961
EWS
Comment 2
2023-07-24 17:38:09 PDT
Committed
266273@main
(3d721c09585b): <
https://commits.webkit.org/266273@main
> Reviewed commits have been landed. Closing PR #15961 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug