Source/WebKit/UIProcess/API/mac/WKView.mm
@@ -923,6 +923,14 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
 }
 
+- (void)_web_windowWillEnterFullScreen
+{
+}
+
+- (void)_web_windowWillExitFullScreen
+{
+}
+
 - (void)_didHandleAcceptedCandidate
 {
 }
